--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,10 @@
+button{
+    background-color: ghostwhite;
+    color: black;
+    transition: 2s;
+}
 
+button:hover{
+    background-color: cornflowerblue;
+    color: white;
+}
