--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -29,15 +29,17 @@ nav {
 
 @keyframes top {
   from {}
-  to {}
+  to {transform: rotate(45deg) translate(15%); 
+    transform-origin: bottom left;}
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {background-color:rebeccapurple;}
+  to {background-color:mediumvioletred;}
 }
 
 @keyframes bottom {
   from {}
-  to {}
+  to {transform: rotate(-45deg) translate(13%);
+    transform-origin: top left;}
 }
